# rust-crates-api

./: Cargo.toml  Dockerfile  docker-compose.yml
migrations/2024-02-27-234320_create_rustaceans/: up.sql
migrations/2024-02-27-234335_create_crates/: down.sql  up.sql
src/: controllers.rs  main.rs  models.rs  schema.rs
